Closed Bug 468364 Opened 17 years ago Closed 17 years ago

Shouldn't be necessary for nsLocalMoveCopyMsgTxn to implement QueryInterface

Categories

(MailNews Core :: Backend, defect)

defect
Not set
minor

Tracking

(Not tracked)

RESOLVED FIXED
Thunderbird 3.0b2

People

(Reporter: neil, Assigned: neil)

Details

Attachments

(1 file, 1 obsolete file)

An nsLocalMoveCopyMsgTxn is only created in one place but it is then assigned to a member variable of type nsMsgTxn so that it has to be "cast" back. Instead the member should simply be declared to be of the correct type.
Attached patch Proposed patch (obsolete) — Splinter Review
Assignee: nobody → neil
Status: NEW → ASSIGNED
Attachment #351813 - Flags: superreview?(bienvenu)
Attachment #351813 - Flags: review?(bienvenu)
After reviewing bug 65775 I realised that I'd left it in by mistake ;-)
Comment on attachment 351816 [details] [diff] [review] Kill the #define too thx, Neil.
Attachment #351816 - Flags: superreview+
Attachment #351816 - Flags: review+
Attachment #351813 - Attachment is obsolete: true
Attachment #351813 - Flags: superreview?(bienvenu)
Attachment #351813 - Flags: review?(bienvenu)
Comment on attachment 351813 [details] [diff] [review] Proposed patch obsoleting in favor of second patch.
Pushed changeset 8e8a945d3230 to comm-central.
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Target Milestone: --- → Thunderbird 3.0b2
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: