Bug 468364 Shouldn't be necessary for nsLocalMoveCopyMsgTxn to implement QueryInterface r+sr=bienvenu